Prepare for 0.1 release: gnu-build-system.
* configure: New file.
* make/install.make: New file.
* .gitignore: Ignore generated files.
* build-aux/gitlog-to-changelog: New file.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.go
 *.o
 *~
+/.config.make
 /a.out
 /mes
 /mes.h
@@ -10,3 +11,8 @@
 /*.cat
 ?
 ?.mes
+/out
+/.tarball-version
+/ChangeLog
+.#*
+\#*#
