Generate C header and includes using snarfing.
* mes.c: Move specific renames and n-args to alist annotation.
* build-aux/mes-snarf.scm: New file.
* GNUmakefile (mes.environment.h): Use it.
  (mes.h): Remove.
  (clean): Update.
  (mes.o): New dependency rule.
* .gitignore: Update.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 *-
+*.cat
+*.environment.h
+*.environment.i
 *.go
 *.o
+*.symbols.i
 *~
+.#*
 /.config.make
-/a.out
-/mes
-/mes.h
-/environment.i
-/symbols.i
-/*.cat
-?
-?.mes
-/out
 /.tarball-version
 /ChangeLog
-.#*
+/a.out
+/mes
+/out
+?
+?.mes
 \#*#
