mescc: Cleanup mini-mes build and test.
* GNUmakefile (guile-cons-mes guile-m guile-main guile-micro-mes
  guile-mini-mes guile-t guile-tiny-mes): New targets.
  (clean): Clean them.
* .gitignore: Ignore them.
* HACKING: Update.
* scaffold/tiny-mes.c (bload_env): Read module/mes/tiny-0-32.mo.
* scaffold/cons-mes.c (simple_bload_env): Likewise.
* lib.c (dump)[MES_TINY]: Write crafted dump: module/mes/tiny-0-32.mo.
  (load_env): Read module/mes/mini-0.mes.
  (bload_env): Read module/mes/read-0-32.mo.
* module/mes/mini-0.mes: New file.
* module/mes/tiny-0.mes : New file.

--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,28 @@
 /ChangeLog
 /a.out
 /mes
+/mes-32
+
+/cons-mes
+/m
+/main
 /micro-mes
 /mini-mes
+/t
 /tiny-mes
-/module/mes/hack-32.mo
-/module/mes/read-0-32.mo
+
+/guile-cons-mes
+/guile-m
+/guile-main
+/guile-micro-mes
+/guile-mini-mes
+/guile-t
+/guile-tiny-mes
+
+/module/mes/tiny-0-32.mo
+#keep this: bootstrap
+#/module/mes/read-0-32.mo
+/module/mes/mini-0.mo
 /module/mes/read-0.mo
 /out
 ?
