mescc: Add brk, naive malloc.
* scaffold/mini-mes.c (gc_init_cells): Use malloc to init g_cells.
* scaffold/malloc.c: New file.
* GNUmakefile (malloc, guile-malloc): New targets.
* module/mes/libc-i386.mes (i386:brk): New function.
  (i386:libc): Add it.
* mlibc.c (brk): New function.
  (malloc): Use it.
  (realloc): New function.
* module/mes/libc.mes (malloc, realloc): New functions.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 
 /cons-mes
 /m
+/malloc
 /main
 /micro-mes
 /mini-mes
@@ -25,6 +26,7 @@
 
 /guile-cons-mes
 /guile-m
+/guile-malloc
 /guile-main
 /guile-micro-mes
 /guile-mini-mes
