--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.h
 *.i
 *.o
+*.o-32
 *.symbols.i
 *~
 .#*
@@ -32,6 +33,8 @@
 /guile-mini-mes
 /guile-t
 /guile-tiny-mes
+
+/mes-mini-mes
 
 /module/mes/tiny-0-32.mo
 #keep this: bootstrap
