mescc: Produce M1 output instead of hex2.
Use: ./make.scm [TARGET]
     ./make.scm check

* stage0/x86.M1: New file.
* mlibc/mini-libc-mes.c (exit, write): Use M1 instead of .byte.
* mlibc/libc-mes.c (_start, exit, read, write, open, access, brk,
  fsync, printf): Use M1 instead of .byte.
* module/mes/as-i386.mes: Use M1.
* module/mes/make.scm: New file.
* make.scm: New file.
* guile/guix/records.scm: New File.
* guile/guix/shell-utils.scm: New file.
* module/mes/M1.mes: Rename from hex2.mes.
* module/mes/M1.scm: Rename from hex2.scm.
* scripts/mescc.mes: Update callers.
* guile/mescc.scm: Update callers.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,21 @@
 *.go
 *~
 .#*
+*.E
+*.log
+*.gcc
+*.guile
+*.0-guile
+*.mini-guile
+*.mlibc-gcc
+*.mlibc-o
+*.hex2-o
+#*.M1
+
+/src/*.h
+/src/*.i
+
+*.o
 /.config.make
 /.tarball-version
 /ChangeLog
