mlibc: GNU Gcc support: setjmp, longjmp.
* stage0/x86.M1 (jmp____*%ebx): New macro.
  (mov____0x8(%ebp),%ebp): New macro.
  (mov____0x8(%ebp),%esp): New macro.
* include/setjmp.h (jmp_buf): Redefine as struct.
* lib/libc-mes+tcc.c (longjmp, setjmp): Implement.
* scaffold/tests/80-setjmp.c: Test it.
* make.scm ("80-setjmp"): Build it.
* .gitignore: Ignore *.tcc-guile.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 *.mini-hex2
 *.mlibc-gcc
 *.mlibc-o
+*.tcc-guile
 !/stage0/*
 !/stage0/*.c
 /stage0/exit-42.*
@@ -48,3 +49,4 @@
 /doc/fosdem/fosdem.tex
 /doc/fosdem/fosdem.toc
 /doc/fosdem/fosdem.*vrb
+
