build: Simplify, drop make.scm experiment.
* build.sh: Rewrite.
* build-aux/build-cc.sh: New file.
* build-aux/build-mes.sh: New file.
* build-aux/build-mlibc.sh: New file.
* build-aux/cc.sh: New file.
* build-aux/cc-mes.sh: New file.
* build-aux/cc-mlibc.sh: New file.
* install.sh: Update.
* make.scm: Remove.
* guile/guix/make.scm: Remove.
* guile/guix/records.scm: Remove.
* guile/guix/shell-utilsg.scm: Remove.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 *-
+*.blood-elf-M1
+*.blood-elf-hex2
 *.go
 *~
 .#*
@@ -32,7 +34,10 @@
 /.tarball-version
 /ChangeLog
 /a.out
+*.gcc-out
 *.mes-out
+*.mlibc-out
+*.seed-out
 
 #keep this: bootstrap
 #/mes.mes
