build: Fixes for Debian and /bin/sh == dash.
* build.sh: Use separate export stanzas.  Use command -v (WAS: type
  -p).  Fixes sh, /bin/sh == dash.
* build-aux/build-cc.sh: Likewise.
* build-aux/build-guile.sh: Likewise.
* build-aux/build-mes.sh: Likewise.
* build-aux/build-mlibc.sh: Likewise.
* build-aux/cc-mes.sh: Likewise.
* build-aux/check-mescc.sh: Likewise.
* check.sh: Likewise.
* install.sh: Likewise.
* scripts/mescc: Likewise.

--- a/.gitignore
+++ b/.gitignore
@@ -14,13 +14,17 @@
 *.hex2
 *.hex2-o
 *.log
-*.stderr
-*.stdout
+*.mes-o
+*.mes-stdout
 *.mini-M1
 *.mini-guile
 *.mini-hex2
 *.mlibc-gcc
 *.mlibc-o
+*.mlibc-out
+*.mlibc-stdout
+*.stderr
+*.stdout
 *.tcc-guile
 !/stage0/*
 !/stage0/*.c
