mescc: Posixify interface.
* module/mescc/compile.mes: Move from language/c99/compiler.mes.
* module/mescc: New module..
* module/mescc/M1.scm: Move from mes/M1.mes.
* module/mescc/as.scm: Likewise.
* module/mescc/bytevectors.scm: Likewise.
* module/mescc/mescc.scm: New file.
* scripts/mescc: Update to new layout and posixy interface.
* GNUmakefile: Likewise.
* build-aux/build-cc.sh: Likewise.
* build-aux/build-guile.sh: Likewise.
* build-aux/build-mes.sh: Likewise.
* build-aux/build-mlibc.sh: Likewise.
* build-aux/cc-mes.sh: Likewise.
* build-aux/cc-mlibc.sh: Likewise.
* build-aux/cc.sh: Likewise.
* build-aux/check-mescc.sh: Likewise.
* build-aux/test.sh: Likewise.
* build.sh: Likewise.
* .gitignore: Update for posixy extensions.

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,13 @@
 *.0-guile
 *.0-hex2
 *.E
-*.M1
+*.S
+*.o
+*.blood-elf
 *.gcc
 *.guile
-*.hex2
-*.hex2-o
 *.log
+*.gcc-o
 *.mes-o
 *.mes-stdout
 *.mini-M1
@@ -32,8 +33,8 @@
 
 /src/*.h
 /src/*.i
+/src/mes
 
-*.o
 /.config.make
 /.store
 /.tarball-version
@@ -59,4 +60,3 @@
 /doc/fosdem/fosdem.tex
 /doc/fosdem/fosdem.toc
 /doc/fosdem/fosdem.*vrb
-
