build: Use arch-dir.
* lib/x86-mes: Move from stage0.
* build-aux/build-cc.sh: Create libraries in lib/gcc.  Update users.
* build-aux/build-mes.sh: Create libraries in lib/x86-mes.  Update users.
* build-aux/build-mes-gcc.sh: Rename from build-mlibc.sh.  Create
  libraries in lib/x86-mes-gcc.  Update callers.
* build-aux/cc-mes-gcc.sh: Rename from cc-mlibc.sh.  Update callers.

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,32 @@
 *-
-*.blood-elf-M1
-*.blood-elf-hex2
-*.go
 *~
 .#*
-*.0-M1
-*.0-guile
-*.0-hex2
 *.E
 *.S
-*.o
 *.blood-elf
+*.blood-elf-M1
+*.blood-elf-hex2
 *.gcc
+*.gcc-o
+*.gcc-out
+*.go
 *.guile
 *.log
-*.gcc-o
+*.mes-gcc
+*.mes-gcc-o
+*.mes-gcc-out
+*.mes-gcc-out
+*.mes-gcc-stdout
 *.mes-o
+*.mes-out
 *.mes-stdout
 *.mini-M1
 *.mini-guile
 *.mini-hex2
-*.mlibc-gcc
-*.mlibc-o
-*.mlibc-out
-*.mlibc-stdout
+*.o
+*.seed-out
 *.stderr
 *.stdout
-*.tcc-guile
-!/stage0/*
-!/stage0/*.c
-/stage0/exit-42.*
 
 /src/*.h
 /src/*.i
@@ -39,11 +36,6 @@
 /.store
 /.tarball-version
 /ChangeLog
-/a.out
-*.gcc-out
-*.mes-out
-*.mlibc-out
-*.seed-out
 
 #keep this: bootstrap
 #/mes.mes
