build: Support tcc, create tinycc-seed with tcc.
* configure: check for tcc.
* build-aux/cc32-mes.sh: Rename from cc-mes-gcc.sh.  Support
  tcc.  Update users.
* build-aux/build-cc32-mes.sh: Rename from build-mes-gcc.sh.  Update users.
* GNUmakefile (mes-tcc): New target.
* .gitignore: Ignore mes-tcc arch output.
* lib/crt1.c (_start): Add "rm" constraint so satisfy tcc.
* lib/linux-gcc.c (_sys_call, _sys_call1 _sys_call2 _sys_call3): Likewise.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@
 *.mes-gcc-out
 *.mes-gcc-out
 *.mes-gcc-stdout
+*.mes-tcc
+*.mes-tcc-o
+*.mes-tcc-out
+*.mes-tcc-out
+*.mes-tcc-stdout
 *.mes-o
 *.mes-out
 *.mes-stdout
@@ -29,6 +34,8 @@
 *.stderr
 *.stdout
 
+/lib/x86-mes-gcc
+/lib/x86-mes-tcc
 /src/*.h
 /src/*.i
 /src/mes
