doc: Add html, pdf.
* GNUmakefile (html, pdf): New target.
* .gitignore: Ignore html, pdf targets.

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,9 @@
 /doc/fosdem/fosdem.tex
 /doc/fosdem/fosdem.toc
 /doc/fosdem/fosdem.*vrb
+/doc/mes
 /doc/mes.1
 /doc/mes.info
+/doc/mes.pdf
 /doc/mescc.1
 /doc/version.texi
