--- a/build-aux/GNUmakefile.in
+++ b/build-aux/GNUmakefile.in
@@ -1,5 +1,3 @@
-#! /bin/sh
-
 # Mes --- Maxwell Equations of Software
 # Copyright © 2018 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
 #
@@ -18,18 +16,15 @@
 # You should have received a copy of the GNU General Public License
 # along with Mes.  If not, see <http://www.gnu.org/licenses/>.
 
-set -e
+PHONY_TARGETS:= all all-go build check clean clean-go default dist doc help install\
+install-info man gcc mes src/mes mes-gcc mes-tcc
+.PHONY: $(PHONY_TARGETS)
 
-. build-aux/config.sh
-. build-aux/trace.sh
+default: all
 
-trace "SNARF gc.c"     build-aux/mes-snarf.scm src/gc.c
-trace "SNARF lib.c"    build-aux/mes-snarf.scm src/lib.c
-trace "SNARF math.c"   build-aux/mes-snarf.scm src/math.c
-trace "SNARF mes.c"    build-aux/mes-snarf.scm src/mes.c
-trace "SNARF posix.c"  build-aux/mes-snarf.scm src/posix.c
-trace "SNARF reader.c" build-aux/mes-snarf.scm src/reader.c
-trace "SNARF vector.c" build-aux/mes-snarf.scm src/vector.c
+$(PHONY_TARGETS):
+	$(MAKE) -C $(srcdir) $@
 
-ARCHDIR=1 NOLINK=1 sh build-aux/cc.sh lib/libmes
-sh build-aux/cc.sh src/mes
+include .config.make
+config.make:=$(PWD)/.config.make
+include $(srcdir)/build-aux/export.make
