--- a/mes/module/mes/boot-0.scm.in
+++ b/mes/module/mes/boot-0.scm.in
@@ -219,7 +219,7 @@
 (mes-use-module (mes posix))
 
 (define-macro (include-from-path file)
-  (let loop ((path (cons* %moduledir "module" (string-split (or (getenv "GUILE_LOAD_PATH")) #\:))))
+  (let loop ((path (cons* %moduledir "@srcdir@/module" (string-split (or (getenv "GUILE_LOAD_PATH")) #\:))))
     (cond ((and=> (getenv "MES_DEBUG") (compose (lambda (o) (> o 2)) string->number))
            (core:display-error (string-append "include-from-path: " file " [PATH:" (string-join path ":") "]\n")))
           ((and=> (getenv "MES_DEBUG") (compose (lambda (o) (> o 1)) string->number))
