--- a/build-aux/pre-inst-env.in
+++ b/build-aux/pre-inst-env.in
@@ -26,7 +26,7 @@ MES_PREFIX=mes
 export MES_PREFIX
 
 GUILE_LOAD_COMPILED_PATH="$abs_top_builddir/module${GUILE_LOAD_COMPILED_PATH:+:}$GUILE_LOAD_COMPILED_PATH"
-GUILE_LOAD_PATH="$abs_top_srcdir/module${GUILE_LOAD_PATH:+:}$GUILE_LOAD_PATH"
+GUILE_LOAD_PATH="$abs_top_srcdir/module:$abs_top_srcdir/guix${GUILE_LOAD_PATH:+:}$GUILE_LOAD_PATH"
 if [ -n "$top_builddest" ]; then
     GUILE_LOAD_PATH="$abs_top_buildir/module:$GUILE_LOAD_PATH"
 fi
