doc: Release update.
* HACKING: Update.
* INSTALL: Update.
* NEWS: Update.
* README: Update.
* doc/announce/ANNOUNCE-0.17: New file.

--- a/build-aux/GNUmakefile.in
+++ b/build-aux/GNUmakefile.in
@@ -300,8 +300,19 @@ else
 $(warning update-hash: no guix)
 endif
 
-release: update-hash
+tag:
+	git tag -s v$(VERSION) -m "GNU Mes $(VERSION)."
+
+# Release process
+#  0. doc: Release update, Release commit, make seed, test guix bootstrap
+#  1. make tag
+#  2. make dist
+#  3. make release
+
+guix-build:
 	./pre-inst-env $(GUIX) build mes@$(VERSION) --with-source=$(TARBALL)
+
+release: update-hash | gen-announce guix-build
 
 GPG_KEY_ID:=1A858392E331EAFDB8C27FFBF3C1A0D9C1D65273
 gen-announce:
