--- a/build-aux/check.sh.in
+++ b/build-aux/check.sh.in
@@ -20,8 +20,14 @@
 
 set -e
 
-. build-aux/config.sh
-. build-aux/trace.sh
+srcdest="@srcdest@"
+srcdir="@srcdir@"
+abs_top_srcdir="@abs_top_srcdir@"
+abs_top_builddir="@abs_top_builddir@"
+prefix=${prefix-@prefix@}
+
+. ${srcdest}build-aux/config.sh
+. ${srcdest}build-aux/trace.sh
 
 GUILE=${GUILE-guile}
 MES=${MES-src/mes}
@@ -33,7 +39,7 @@ fi
 
 set -e
 
-[ "$GUILE" != true ] && MES=guile bash build-aux/check-mes.sh
-[ "$MES" != guile ] && bash build-aux/check-mes.sh
-bash build-aux/check-boot.sh
-bash build-aux/check-mescc.sh
+[ "$GUILE" != true ] && MES=guile bash ${srcdest}build-aux/check-mes.sh
+[ "$MES" != guile ] && bash ${srcdest}build-aux/check-mes.sh
+bash ${srcdest}build-aux/check-boot.sh
+bash ${srcdest}build-aux/check-mescc.sh
