--- a/build-aux/install.sh.in
+++ b/build-aux/install.sh.in
@@ -19,18 +19,19 @@
 # along with GNU Mes.  If not, see <http://www.gnu.org/licenses/>.
 
 set -e
+srcdest="@srcdest@"
+srcdir="@srcdir@"
+abs_top_srcdir="@abs_top_srcdir@"
+abs_top_builddir="@abs_top_builddir@"
+prefix=${prefix-@prefix@}
 
-. build-aux/trace.sh
+. ${srcdest}build-aux/config.sh
+. ${srcdest}build-aux/trace.sh
+
+SHELL=${SHELL-$(command -v sh)}
 
 # use bash or lose if pipes fail
 [ -n "$BASH" ] && set -o pipefail
-
-SHELL=${SHELL-$(command -v sh)}
-prefix=${prefix-/usr/local}
-top_builddest=${top_builddest-}
-top_builddir=${top_buildir-.}
-abs_top_srcdir=${abs_top_srcdir-$PWD}
-abs_top_builddir=${abs_top_builddir-$PWD}
 
 MES_PREFIX=${MES_PREFIX-$prefix/share/mes}
 MES_SEED=${MES_SEED-../MES-SEED}
@@ -52,8 +53,8 @@ guile_site_dir=${guile_site_dir-$prefix/share/guile/site/$GUILE_EFFECTIVE_VERSIO
 guile_site_ccache_dir=${guile_site_ccache_dir-$prefix/lib/guile/$GUILE_EFFECTIVE_VERSION/site-ccache}
 
 mkdir -p $DESTDIR$bindir
-cp ${top_builddest}src/mes $DESTDIR$bindir/mes
-cp ${top_builddest}scripts/mescc $DESTDIR$bindir/mescc
+cp src/mes $DESTDIR$bindir/mes
+cp scripts/mescc $DESTDIR$bindir/mescc
 
 sed \
     -e "s,^#! /bin/sh,#! $SHELL," \
@@ -65,7 +66,7 @@ mkdir -p $docdir
 if [ -n "$PERL" -a -n "$GIT" ]\
        && $PERL -v > /dev/null\
        && $GIT --status > /dev/null; then
-    $PERL build-aux/gitlog-to-changelog --srcdir=. > ${top_builddest}ChangeLog
+    $PERL ${srcdest}build-aux/gitlog-to-changelog --srcdir=. > ChangeLog
 fi
 
 cp\
@@ -78,42 +79,48 @@ cp\
     README\
     $DESTDIR$docdir
 
-if [ -f ${top_builddest}ChangeLog ]; then
-    cp ${top_builddest}ChangeLog $DESTDIR$docdir
+if [ -f ChangeLog ]; then
+    cp ChangeLog $DESTDIR$docdir
 else
     cp ChangeLog $DESTDIR$docdir
 fi
 
-if [ -f ${top_builddest}ChangeLog ]; then
-    cp ${top_builddest}ChangeLog $docdir
+if [ -f ChangeLog ]; then
+    cp ChangeLog $docdir
 else
     cp ChangeLog $docdir
 fi
 
 mkdir -p $DESTDIR$MES_PREFIX
-tar -cf- include lib | tar -xf- -C $DESTDIR$MES_PREFIX
-tar -cf- scaffold --exclude='*.gcc*' --exclude='*.mes*' | tar -xf- -C $DESTDIR$MES_PREFIX
-tar -cf- ${top_builddest}lib | tar -xf- -C $DESTDIR$MES_PREFIX
-tar -cf- --exclude='*.go' module | tar -xf- -C $DESTDIR$MES_PREFIX
-tar -cf- -C mes module | tar -xf- -C $DESTDIR$MES_PREFIX
+if [ -z "$srcdest" ]; then
+    tar -cf- include lib | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- --exclude='*.go' module | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- scaffold --exclude='*.gcc*' --exclude='*.mes*' | tar -xf- -C $DESTDIR$MES_PREFIX
+else
+    tar -cf- -C ${srcdest} include lib | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- -C lib | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- -C ${srcdest} module | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- -C ${srcdest} scaffold | tar -xf- -C $DESTDIR$MES_PREFIX
+fi
+tar -cf- -C ${srcdest}mes module | tar -xf- -C $DESTDIR$MES_PREFIX
 
 mkdir -p $DESTDIR$guile_site_dir
 mkdir -p $DESTDIR$guile_site_ccache_dir
-tar -cf- -C module --exclude='*.go' . | tar -xf- -C $DESTDIR$guile_site_dir
-tar -cf- -C ${top_builddest}module --exclude='*.scm' . | tar -xf- -C $DESTDIR$guile_site_ccache_dir
+tar -cf- -C ${srcdest}module --exclude='*.go' . | tar -xf- -C $DESTDIR$guile_site_dir
+tar -cf- -C module --exclude='*.scm' . | tar -xf- -C $DESTDIR$guile_site_ccache_dir
 
-if [ -f ${top_builddest}doc/mes.info ]; then
+if [ -f doc/mes.info ]; then
     mkdir -p $DESTDIR$infodir
-    tar -cf- ${top_builddest}doc/mes.info* doc/images | tar -xf- --strip-components=1 -C $DESTDIR$infodir
-    install-info --info-dir=$DESTDIR$infodir ${top_builddest}doc/mes.info
+    tar -cf- doc/mes.info* doc/images | tar -xf- --strip-components=1 -C $DESTDIR$infodir
+    install-info --info-dir=$DESTDIR$infodir doc/mes.info
 fi
 
-if [ -f ${top_builddest}doc/mes.1 ]; then
+if [ -f doc/mes.1 ]; then
     mkdir -p $DESTDIR$mandir/man1
-    cp ${top_builddest}doc/mes.1 $DESTDIR$mandir/man1/
+    cp doc/mes.1 $DESTDIR$mandir/man1/
 fi
 
-if [ -f ${top_builddest}doc/mescc.1 ]; then
+if [ -f doc/mescc.1 ]; then
     mkdir -p $DESTDIR$mandir/man1
-    cp ${top_builddest}doc/mescc.1 $DESTDIR$mandir/man1/
+    cp doc/mescc.1 $DESTDIR$mandir/man1/
 fi
