--- a/build-aux/build.sh.in
+++ b/build-aux/build.sh.in
@@ -1,4 +1,4 @@
-#! /bin/sh
+#! @BASH@
 
 # GNU Mes --- Maxwell Equations of Software
 # Copyright © 2017,2018 Jan (janneke) Nieuwenhuizen <janneke@gnu.org>
@@ -18,30 +18,36 @@
 # You should have received a copy of the GNU General Public License
 # along with GNU Mes.  If not, see <http://www.gnu.org/licenses/>.
 
-. build-aux/config.sh
-. build-aux/trace.sh
+srcdest="@srcdest@"
+srcdir="@srcdir@"
+abs_top_srcdir="@abs_top_srcdir@"
+abs_top_builddir="@abs_top_builddir@"
+prefix=${prefix-@prefix@}
+
+. ${srcdest}build-aux/config.sh
+. ${srcdest}build-aux/trace.sh
 
 MES_SEED=${MES_SEED-../mes-seed}
 GUILE=${GUILE-$(command -v guile)}
 MES_ARENA=${MES_ARENA-100000000}
 
 if [ -n "$GUILE" -a "$GUILE" != true ]; then
-    sh build-aux/build-guile.sh
+    sh ${srcdest}build-aux/build-guile.sh
 fi
 
 if [ -n "$CC" ]; then
-    sh build-aux/build-cc.sh
-    cp ${top_builddest}src/mes.gcc-out ${top_builddest}src/mes
+    sh ${srcdest}build-aux/build-cc.sh
+    cp src/mes.gcc-out src/mes
 fi
 
 if [ -n "$CC32" ]; then
-    sh build-aux/build-cc32.sh
-    cp ${top_builddest}src/mes.mes-gcc-out ${top_builddest}src/mes
+    sh ${srcdest}build-aux/build-cc32.sh
+    cp src/mes.mes-gcc-out src/mes
 fi
 
 if [ -n "$TCC" ]; then
-    CC32=$TCC sh build-aux/build-cc32.sh
-    cp ${top_builddest}src/mes.mes-tcc-out ${top_builddest}src/mes
+    CC32=$TCC sh ${srcdest}build-aux/build-cc32.sh
+    cp src/mes.mes-tcc-out src/mes
 fi
 
-sh build-aux/build-mes.sh
+sh ${srcdest}build-aux/build-mes.sh
