--- a/build-aux/pre-inst-env.in
+++ b/build-aux/pre-inst-env.in
@@ -18,24 +18,25 @@
 # You should have received a copy of the GNU General Public License
 # along with GNU Mes.  If not, see <http://www.gnu.org/licenses/>.
 
-top_builddest="@top_builddest@"
+srcdir="@srcdir@"
 abs_top_srcdir="@abs_top_srcdir@"
 abs_top_builddir="@abs_top_builddir@"
+prefix=${prefix-@prefix@}
 
-MES_PREFIX=mes
+MES_PREFIX=${srcdest}mes
 export MES_PREFIX
 
 GUILE_LOAD_COMPILED_PATH="$abs_top_builddir/module${GUILE_LOAD_COMPILED_PATH:+:}$GUILE_LOAD_COMPILED_PATH"
-GUILE_LOAD_PATH="$abs_top_srcdir/module:$abs_top_srcdir/guix${GUILE_LOAD_PATH:+:}$GUILE_LOAD_PATH"
-if [ -n "$top_builddest" ]; then
-    GUILE_LOAD_PATH="$abs_top_buildir/module:$GUILE_LOAD_PATH"
+GUILE_LOAD_PATH="module:mes:$abs_top_srcdir/guix${GUILE_LOAD_PATH:+:}$GUILE_LOAD_PATH"
+if [ -n "$srcdest" ]; then
+    GUILE_LOAD_PATH="${srcdest}module:${srcdest}mes:$GUILE_LOAD_PATH"
 fi
 export GUILE_LOAD_COMPILED_PATH GUILE_LOAD_PATH
 
 PATH="$abs_top_builddir/scripts:$abs_top_builddir/src:$abs_top_builddir/build-aux:$PATH"
 export PATH
 
-MES=${MES-${top_builddest}src/mes}
+MES=${MES-src/mes}
 export MES
 
 GUIX_PACKAGE_PATH="$abs_top_srcdir/guix${GUIX_PACKAGE_PATH:+:}$GUIX_PACKAGE_PATH"
