--- a/build-aux/uninstall.sh.in
+++ b/build-aux/uninstall.sh.in
@@ -20,11 +20,22 @@
 
 #set -e
 
-. build-aux/trace.sh
+srcdest="@srcdest@"
+srcdir="@srcdir@"
+abs_top_srcdir="@abs_top_srcdir@"
+abs_top_builddir="@abs_top_builddir@"
+prefix=${prefix-@prefix@}
 
-GUILE_EFFECTIVE_VERSION=${GUILE_EFFECTIVE_VERSION-$(guile -c '(display (effective-version))')}
+. ${srcdest}build-aux/config.sh
+. ${srcdest}build-aux/trace.sh
 
-prefix=${prefix-/usr/local}
+GUILE=${GUILE-$(command -v guile)} || true
+if [ -z "$GUILE" -o "$GUILE" = true ]; then
+    GUILE_EFFECTIVE_VERSION=${GUILE_EFFECTIVE_VERSION-2.2}
+else
+    GUILE_EFFECTIVE_VERSION=${GUILE_EFFECTIVE_VERSION-$(guile -c '(display (effective-version))')}
+fi
+
 datadir=${datadir-$prefix/share}
 docdir=${docdir-$datadir/doc/mes-$VERSION}
 infodir=${infodir-$datadir/info}
@@ -34,11 +45,11 @@ guile_site_dir=${guile_site_dir-$prefix/share/guile/site/$GUILE_EFFECTIVE_VERSIO
 guile_site_ccache_dir=${guile_site_ccache_dir-$prefix/lib/guile/$GUILE_EFFECTIVE_VERSION/site-ccache}
 
 mkdir -p $DESTDIR$prefix/bin
-cp ${top_builddest}src/mes $DESTDIR$prefix/bin/mes
+cp src/mes $DESTDIR$prefix/bin/mes
 
 mkdir -p $DESTDIR$prefix/lib
 mkdir -p $DESTDIR$MES_PREFIX/lib
-cp ${top_builddest}scripts/mescc $DESTDIR$prefix/bin/mescc
+cp scripts/mescc $DESTDIR$prefix/bin/mescc
 
 rm $DESTDIR$prefix/bin/mes
 rm $DESTDIR$prefix/bin/mescc
