check: Do not fail if partial test prerequisites fail.
* build-aux/check-tcc.sh: Pass if no test directory found.
* build-aux/check.sh.in (TINYCC_PREFIX): Rename from TCC_PREFIX.  Pass
  if partial tests prerequisites fail.

--- a/build-aux/check.sh.in
+++ b/build-aux/check.sh.in
@@ -40,8 +40,14 @@ fi
 
 set -e
 
-[ "$GUILE" != true ] && MES=guile bash ${srcdest}build-aux/check-mes.sh
-[ "$MES" != guile ] && bash ${srcdest}build-aux/check-mes.sh
+if [ "$GUILE" != true ]; then
+    MES=guile bash ${srcdest}build-aux/check-mes.sh
+fi
+if [ "$MES" != guile ]; then
+    bash ${srcdest}build-aux/check-mes.sh
+fi
 bash ${srcdest}build-aux/check-boot.sh
 bash ${srcdest}build-aux/check-mescc.sh
-[ -d $TINYCC_PREFIX/tests/tests2 ] && bash ${srcdest}build-aux/check-tcc.sh
+if [ -d $TINYCC_PREFIX/tests/tests2 ] ;then
+    bash ${srcdest}build-aux/check-tcc.sh
+fi
