--- a/build-aux/install.sh.in
+++ b/build-aux/install.sh.in
@@ -43,14 +43,14 @@ if [ -z "$GUILE" -o "$GUILE" = true ]; then
 else
     GUILE_EFFECTIVE_VERSION=${GUILE_EFFECTIVE_VERSION-$(guile -c '(display (effective-version))')}
 fi
-bindir=${bindir-$prefix/bin}
-datadir=${datadir-$prefix/share}
-docdir=${docdir-$datadir/doc/mes-$VERSION}
-infodir=${infodir-$datadir/info}
-mandir=${mandir-$datadir/man}
-moduledir=${moduledir-$datadir/mes/module}
-guile_site_dir=${guile_site_dir-$prefix/share/guile/site/$GUILE_EFFECTIVE_VERSION}
-guile_site_ccache_dir=${guile_site_ccache_dir-$prefix/lib/guile/$GUILE_EFFECTIVE_VERSION/site-ccache}
+bindir=$(eval echo ${bindir-$prefix/bin})
+datadir=$(eval echo ${datadir-$prefix/share})
+docdir=$(eval echo ${docdir-$datadir/doc/mes-$VERSION})
+infodir=$(eval echo ${infodir-$datadir/info})
+mandir=$(eval echo ${mandir-$datadir/man})
+moduledir=$(eval echo ${moduledir-$datadir/mes/module})
+guile_site_dir=$(eval echo ${guile_site_dir-$prefix/share/guile/site/$GUILE_EFFECTIVE_VERSION})
+guile_site_ccache_dir=$(eval echo ${guile_site_ccache_dir-$prefix/lib/guile/$GUILE_EFFECTIVE_VERSION/site-ccache})
 
 mkdir -p $DESTDIR$bindir
 cp src/mes $DESTDIR$bindir/mes
@@ -95,7 +95,7 @@ mkdir -p $DESTDIR$MES_PREFIX
 if [ -z "$srcdest" ]; then
     tar -cf- include lib | tar -xf- -C $DESTDIR$MES_PREFIX
     tar -cf- --exclude='*.go' module | tar -xf- -C $DESTDIR$MES_PREFIX
-    tar -cf- scaffold --exclude='*.gcc*' --exclude='*.mes*' | tar -xf- -C $DESTDIR$MES_PREFIX
+    tar -cf- --exclude='*.gcc*' --exclude='*.mes*' scaffold | tar -xf- -C $DESTDIR$MES_PREFIX
 else
     tar -cf- -C ${srcdest} include lib | tar -xf- -C $DESTDIR$MES_PREFIX
     tar -cf- -C lib | tar -xf- -C $DESTDIR$MES_PREFIX
