mescc: Initial x86_64-mes scaffold.
* build-aux/GNUmakefile.in (x86_64-mes): New target.
* .gitignore: Ignore x86 and x86_64 out files.
* build-aux/build-mes.sh: Resurrect three initial exit42 scaffold tests.
* build-aux/build-x86_64-mes.sh: New file.  Add initial exit42
  scaffold test.
* lib/x86-mes/elf32-0header.hex2: Fix comment.
* lib/x86-mes/elf32-header.hex2: Likewise.
* lib/x86_64-mes/elf-0footer.hex2: New file.
* lib/x86_64-mes/elf64-0header.hex2: New file.
* lib/x86_64-mes/elf64-body-exit-42.hex2: New file.
* lib/x86_64-mes/exit-42.c: New file.

--- a/.gitignore
+++ b/.gitignore
@@ -19,14 +19,14 @@
 *.mes-gcc-out
 *.mes-gcc-out
 *.mes-gcc-stdout
+*.mes-o
+*.mes-out
+*.mes-stdout
 *.mes-tcc
 *.mes-tcc-o
 *.mes-tcc-out
 *.mes-tcc-out
 *.mes-tcc-stdout
-*.mes-o
-*.mes-out
-*.mes-stdout
 *.mini-M1
 *.mini-guile
 *.mini-hex2
@@ -34,6 +34,9 @@
 *.seed-out
 *.stderr
 *.stdout
+*.x86-out
+*.x86_64-mes-out
+*.x86_64-out
 
 /lib/x86-mes-gcc
 /lib/x86-mes-tcc
