mescc: Mes C Library: Add x86_64 libc-mini support.
* lib/linux/x86-mes-gcc/mini.c: Rename from lib/linux/mini-gcc.c.
* lib/linux/x86-mes/mini.c: Rename from lib/linux/mini-mes.c.
* lib/linux/x86_64-mes-gcc/crt1.c: Rename from lib/linux/x86_64/crt1.c.
* lib/linux/x86_64-mes-gcc/mini.c: New file.
* build-aux/build-cc.sh: Build libc-mini, scaffold/main, scaffold/hello.
* build-aux/cc64.sh: New file.

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,11 @@
 *.stderr
 *.stdout
 *.x86-out
+*.x86_64-mes-gcc-o
+*.x86_64-mes-gcc-out
 *.x86_64-mes-out
 *.x86_64-out
+
 
 /lib/x86-mes-gcc
 /lib/x86-mes-tcc
