build: src/mes build fixes.
* build-aux/GNUmakefile.in (seed): Add dependency on gcc.
* build-aux/build-cc.sh: Copy result to src/mes.
* build-aux/build-cc32.sh: Likewise.
* build-aux/build.sh.in: Remove copying of results.

--- a/build-aux/GNUmakefile.in
+++ b/build-aux/GNUmakefile.in
@@ -145,7 +145,7 @@ install:
 uninstall:
 	./uninstall.sh
 
-seed: all-go mes-gcc mes-tcc
+seed: all-go gcc mes-gcc mes-tcc
 	cd $(MES_SEED) && git reset --hard HEAD
 	MES=$(GUILE) GUILE=$(GUILE) SEED=1 ${srcdest}build-aux/build-mes.sh
 	cd $(MES_SEED) && MES_PREFIX=$(PWD) ./refresh.sh
