mescc: Add dir to include path.
* module/mescc/mescc.scm (preprocess): Add dir to include path.
(c->info): Likewise.
* scaffold/tests/08-assign.c: New file.

--- a/build-aux/GNUmakefile.in
+++ b/build-aux/GNUmakefile.in
@@ -135,6 +135,9 @@ clean-go:
 check:
 	./check.sh
 
+check-mescc:
+	./pre-inst-env build-aux/check-mescc.sh
+
 # Mes does not feature post-install checks yet, so we're great!
 installcheck:
 	true
